Fix css bug - doughnut was too big on small screen

--- a/assembl/static2/css/components/posts.scss
+++ b/assembl/static2/css/components/posts.scss
@@ -125,7 +125,7 @@
       margin: -95px 0 0;
     }
 
-    .gauge {
+    .doughnut {
       transform: scale(0.45);
     }
 
